# nps-waveform-analysis

./: .gitignore  CMakeLists.txt  main.cpp
.github/workflows/: doxygen.yml
config/: branches.json  config.json
docs/: CONFIGURATION.md  DESIGN.md  Doxyfile  INSTALL.md  README.md  USAGE.md
include/: ApplicationManager.hpp  BranchManager.hpp  Config.hpp  ConfigManager.hpp  DataAnalysisManager.hpp  DataTypes.hpp  FileManager.hpp  GlobalManager.hpp  LinkDef.h  ManagerConfigs.hpp  ReferenceManager.hpp  WaveformFitter.hpp
reference_waveforms/: RWF_1423_1511_Setting.txt  RWF_1969_1982_Setting.txt  RWF_2855_2871_Setting.txt  RWF_2875_2885_Setting.txt  RWF_2900_2920_Setting.txt  RWF_3883_3898_Setting.txt  RWF_5183_5208_Setting.txt  RWF_5217_5236_Setting.txt  RWF_6151_6168_Setting.txt  RWF_6171_6183_Setting.txt
src/: ApplicationManager.cpp  BranchManager.cpp  ConfigManager.cpp  DataAnalysisManager.cpp  FileManager.cpp  GlobalManager.cpp  ReferenceManager.cpp  WaveformFitter.cpp  WaveformSkeleton.cpp
utils/: PlotNthPeakEvents.C  branches_to_json.py  plot_waveforms_to_pdf.py  refences_spec_from_raw.py
